feat: adds update employee rest resource
