# application/rest/docs/swagger.yaml
@@ -63,6 +63,15 @@ definitions:
         example: false
         type: boolean
     type: object
+  rest.UpdateEmployeeRequest:
+    properties:
+      email:
+        type: string
+      first_name:
+        type: string
+      last_name:
+        type: string
+    type: object
 info:
   contact:
     email: contato@coding4u.com.br
@@ -178,6 +187,43 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: find a employee
+      tags:
+      - Employee
+    put:
+      consumes:
+      - application/json
+      description: Router for update a employee
+      operationId: updateEmployee
+      parameters:
+      - description: Employee ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: JSON body to update a new employee
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/rest.UpdateEmployeeRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/rest.HTTPResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/rest.HTTPError'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/rest.HTTPError'
+      security:
+      - ApiKeyAuth: []
+      summary: update a employee
       tags:
       - Employee
   /employees/{id}/password:
