# application/rest/employee.go
@@ -211,3 +211,58 @@ func (s *EmployeeRestService) SearchEmployees(ctx *gin.Context) {
 
 	ctx.JSON(http.StatusOK, employees)
 }
+
+// UpdateEmployee godoc
+// @Security ApiKeyAuth
+// @Summary update a employee
+// @Description Router for update a employee
+// @ID updateEmployee
+// @Tags Employee
+// @Accept json
+// @Produce json
+// @Param id path string true "Employee ID"
+// @Param body body UpdateEmployeeRequest true "JSON body to update a new employee"
+// @Success 200 {object} HTTPResponse
+// @Failure 400 {object} HTTPError
+// @Failure 403 {object} HTTPError
+// @Router /employees/{id} [put]
+func (s *EmployeeRestService) UpdateEmployee(ctx *gin.Context) {
+	var req ID
+	var json UpdateEmployeeRequest
+
+	if err := ctx.ShouldBindJSON(&json); err != nil {
+		ctx.JSON(
+			http.StatusBadRequest,
+			HTTPError{
+				Code:  http.StatusBadRequest,
+				Error: err.Error(),
+			},
+		)
+		return
+	}
+
+	if err := ctx.ShouldBindUri(&req); err != nil {
+		ctx.JSON(
+			http.StatusBadRequest,
+			HTTPError{
+				Code:  http.StatusBadRequest,
+				Error: err.Error(),
+			},
+		)
+		return
+	}
+
+	err := s.EmployeeService.UpdateEmployee(ctx, req.ID, json.FirstName, json.LastName, json.Email)
+	if err != nil {
+		ctx.JSON(
+			http.StatusForbidden,
+			HTTPError{
+				Code:  http.StatusForbidden,
+				Error: err.Error(),
+			},
+		)
+		return
+	}
+
+	ctx.JSON(http.StatusOK, HTTPResponse{Code: http.StatusOK, Message: "updated successfully"})
+}
